--- a/pg/projects.html
+++ b/pg/projects.html
@@ -5,11 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
     <link rel="stylesheet" href="../css/css.css">
-    <link rel="stylesheet" href="../css/project.css">
+    <link rel="stylesheet" href="../css/projects.css">
     <link rel="stylesheet" href="../css/workenv.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+    <link href="//cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.0/bootstrap3-editable/css/bootstrap-editable.css" rel="stylesheet"/>
     <script src="../js/jquery-2.1.3.min.js" type="text/javascript"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+    <script src="../js/projects.js" type="text/javascript"></script>
+    
+<script src="//cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.0/bootstrap3-editable/js/bootstrap-editable.min.js"></script>
 </head>
 <body>
   <!-- Header -->
@@ -26,63 +30,63 @@
     </div>
     <div class="maindiv">
         <div class="leftDivBut">
-            <div style="padding: 6%;">
+            <div style="padding:6%;">
                     <div class="selects panel panel-default">
                         <div class="panel-heading">
                             <h3 class="panel-title">
                             Проекты:
                             </h3>
                         </div>
-                </div>
-                <div class="gorizont">
-                <div class="inputs panel panel-default">
                         <div style="padding:0;" class="panel-body">
-                            <input type="button" style="border:none; width: 100%; height:20%; margin:0;" class="btn btn-default" value="кококо">
-                            <input type="button" style="border:none; width: 100%; height:20%; margin:0;" class="btn btn-default" value="мимими" >
-                            <input type="button" style="border:none; width: 100%; height:20%; margin:0;" class="btn btn-default" value="ляляля" >
+                            <input type="button" class="btn buttonProject" value="MyProject1">
+                            <input type="button" class="btn buttonProject" value="MyProject2" >
+                            <input type="button" class="btn buttonProject" value="MyProject3" >
                         </div>
-                </div>
+               
                 </div>
             </div>
         </div>
     <div class="rightDiv">
-         <div style = "padding: 1%"></div>
-                    <div class="well well-small padd">
-                            <h3 class="panel-title full-screen ">
-                            Личная информация:
-                                <button style="margin-left: 52%;" type="button" class="btn btn-default btn-small">
+        <div style = "padding: 2%">
+         <div class="panel panel-default full-screen">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">Личная информация:
+                         <button style="margin-left: 79%;" type="button" class="btn btn-default btn-small" onclick="edit()" >
                 <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                                 </button>
-                            </h3>
-                        </div>
-                        <div class="choice panel panel-body panel-default padd">
-                            <h4>
+                        </h3>
+                    </div>
+                        <div id="studentInfo" style = "padding: 1% ">
+                            <h4 class="panel-body">
                                 Группа: ПИ-13-1
                             </h4>
-                            <h4>
+                            <h4 class="panel-body">
                                 Адрес: Тишки
                             </h4>
-                            <h4>
+                            <h4 class="panel-body">
                                 Работает над проектом: cache
                             </h4>
+                             </div>
                         </div>
-             <div style = "padding: 1%"></div>
-                    <div class="well well-small padd">
-                            <h3 class="panel-title full-screen">
-                            Преподаватели:
-                                 <button style="margin-left:54.5%;" type="button" class="btn btn-default btn-small">
-                <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-                                </button>
+                    </div>
+            <div style = "padding: 2%">
+             <div class="panel panel-default full-screen">
+                        <div class="panel-heading">
+                            <h3 class="panel-title">Преподаватели:
+                             <button id="edit" style="margin-left: 82%;" type="button" class="btn btn-default btn-small">
+                    <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                                    </button>
                             </h3>
                         </div>
-                <div class="choice panel panel-body panel-default padd">
-                        <h4>
-                            Петросян
-                        </h4>
-                        <h4>
-                          Петросян
-                       </h4>
-               </div>
+                            <div style = "padding: 1%">
+                                <div style="padding:0;" class="panel-body">
+                                    <input type="button" class="btn buttonTeacher" value="Преподаватель">
+                                    <input type="button" class="btn buttonTeacher" value="Преподаватель" >
+                                    <input type="button" class="btn buttonTeacher" value="Преподаватель" >
+                                </div>
+                                 </div>
+                            </div>
+                    </div>
 
                 </div>
             </div>
