--- a/pg/projects.html
+++ b/pg/projects.html
@@ -12,8 +12,7 @@
     <script src="../js/jquery-2.1.3.min.js" type="text/javascript"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <script src="../js/projects.js" type="text/javascript"></script>
-    
-<script src="//cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.0/bootstrap3-editable/js/bootstrap-editable.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.0/bootstrap3-editable/js/bootstrap-editable.min.js"></script>
 </head>
 <body>
   <!-- Header -->
@@ -31,18 +30,20 @@
     <div class="maindiv">
         <div class="leftDivBut">
             <div style="padding:6%;">
-                    <div class="selects panel panel-default">
+                    <div class="panel panel-default">
                         <div class="panel-heading">
                             <h3 class="panel-title">
                             Проекты:
+                                <button id="edit" style="margin-left: 64%;" 
+                                        type="button" class="btn btn-default btn-small">
+                    <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                                    </button>
                             </h3>
                         </div>
-                        <div style="padding:0;" class="panel-body">
-                            <input type="button" class="btn buttonProject" value="MyProject1">
-                            <input type="button" class="btn buttonProject" value="MyProject2" >
-                            <input type="button" class="btn buttonProject" value="MyProject3" >
+                        <div id = "projectsDiv" style="padding:0;" class="panel-body">
+                            <input type="button" style = "border-style:none; width: 100%; height:20%; margin:0;" 
+                                   class="btn btn-default buttonProject" value="MyProject1">
                         </div>
-               
                 </div>
             </div>
         </div>
@@ -72,20 +73,24 @@
             <div style = "padding: 2%">
              <div class="panel panel-default full-screen">
                         <div class="panel-heading">
-                            <h3 class="panel-title">Преподаватели:
-                             <button id="edit" style="margin-left: 82%;" type="button" class="btn btn-default btn-small">
+                            <h3 id = 'divdiv' class="panel-title">Преподаватели:
+                             <button id="addTeacher" style="margin-left: 83%;" type="button" class="btn btn-default btn-small" onclick="addDynamic()">
                     <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
                                     </button>
                             </h3>
                         </div>
-                            <div style = "padding: 1%">
-                                <div style="padding:0;" class="panel-body">
-                                    <input type="button" class="btn buttonTeacher" value="Преподаватель">
-                                    <input type="button" class="btn buttonTeacher" value="Преподаватель" >
-                                    <input type="button" class="btn buttonTeacher" value="Преподаватель" >
+                            <div id = "Div">
+                                <div id = "teachersDiv" style="padding:0;" class="panel-body">
+                                    <div class = 'gorizont'>
+                                    <input type="button" style = "border-style: none; width: 97%; margin: 0;padding-right: 90%;"
+                                           class="btn btn-default buttonTeacher" value="Преподаватель">
+                                     <button id="deleteTeacher" style = 'border: none;' type="button" class="btn btn-default btn-small" onclick="del()">
+                    <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                                    </button> 
+                                    </div>
                                 </div>
-                                 </div>
                             </div>
+                        </div>
                     </div>
 
                 </div>
