--- a/pg/workenv.html
+++ b/pg/workenv.html
@@ -577,7 +577,7 @@
                     <div class="gorizont alBig ">
                     <h4>Формула:</h4>
                     <div>
-                    <input type="text" style="margin-left:35%; width:395%;"></input>
+                    <input type="text" style="margin-left:35%; width:210%;"></input>
                     </div>
                     </div>
                 </div>
@@ -589,6 +589,7 @@
                                     <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
                                 </button>
             </div>
+            <div id = "constraintList">
             <div class="panel panel-default constraintPanel " width="80%">
                <div class="gorizont">
                 <div  class="btn-group"  style="margin-top:2%;">
@@ -628,6 +629,8 @@
                     </div>
                     </div>
             </div>
+
+             </div>
 
 
 
