--- a/pg/workenv.html
+++ b/pg/workenv.html
@@ -20,6 +20,7 @@
     <script src="../js/workenv.js" type="text/javascript"></script>
     <script src="../js/app.js" type="text/javascript"></script>
     <script src="../js/draw.js" type="text/javascript"></script>
+	<script src="../js/translit.js" type="text/javascript"></script>
     <script src="../js/bootstrap.min.js"></script>
     <script src="../js/concept.js" type="text/javascript"></script>
 
