--- a/pg/projects.html
+++ b/pg/projects.html
@@ -14,6 +14,7 @@
 	 <script src="../js/translit.js" type="text/javascript"></script>
 	<script src="../js/controllers/user-room-controller.js "></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+	<script src="../js/jquery.cookie.js" type="text/javascript"></script>
 </head>
 <body ng-app="cache">
   <!-- Header -->
