--- a/pg/registration.html
+++ b/pg/registration.html
@@ -52,6 +52,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
 <script src="../js/jquery-2.1.3.min.js" type="text/javascript"></script>
 <script src="../js/angular.min.js" type="text/javascript"></script>
 <script src="../js/translit.js" type="text/javascript"></script>
+<script src="../js/jquery.cookie.js" type="text/javascript"></script>
 <link rel="stylesheet" href="../css/registration.css">
 <link href="http://fonts.googleapis.com/css?family=Titillium+Web:400,300,600" rel="stylesheet" type="text/css">
 </head>
