--- a/pg/workenv.html
+++ b/pg/workenv.html
@@ -23,6 +23,7 @@
 	<script src="../js/translit.js" type="text/javascript"></script>
     <script src="../js/bootstrap.min.js"></script>
     <script src="../js/concept.js" type="text/javascript"></script>
+	<script src="../js/jquery.cookie.js" type="text/javascript"></script>
 
     <script src="../js/controllers/er-controller.js" type="text/javascript"></script>
     <script src="../js/controllers/object-diagram-controller.js "></script>
