--- a/pg/workenv.html
+++ b/pg/workenv.html
@@ -44,7 +44,7 @@
                 <h3 id="userNameText">Student</h3>
             </div>
         </div>
-          <button id="logOut" class="logoutButton" onclick="location.href='registration.html'">
+          <button id="logOut" class="logoutButton" onclick="location.href='../index.html'">
             <font class="sender">Выйти</font>
           </button>
     </div>
