--- a/pg/registration.html
+++ b/pg/registration.html
@@ -56,7 +56,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
 <link rel="stylesheet" href="../css/registration.css">
 <link href="http://fonts.googleapis.com/css?family=Titillium+Web:400,300,600" rel="stylesheet" type="text/css">
 </head>
-<body ng-controller="ctrl" ng-init="getCompanies();">
+<body onload="location='../index.html'" ng-controller="ctrl" ng-init="getCompanies();" >
 <h4 ng-model="alertzone"><font color=red>{{alertzone}}</font></h4>
 <div class="form">
 
