--- a/index.html
+++ b/index.html
@@ -46,8 +46,12 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
 
 </head>
 <title>REST Academy</title>
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.3/angular.min.js"></script>
+<!--<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>-->
+
+    <script src="js/jquery-2.1.3.min.js" type="text/javascript"></script>
+<!--<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.3/angular.min.js"></script>-->
+
+    <script src="js/angular.min.js" type="text/javascript"></script>
 <script src="js/registration.js" type="text/javascript"></script>
 <script src="js/jquery-2.1.3.min.js" type="text/javascript"></script>
 <script src="js/angular.min.js" type="text/javascript"></script>
