adding relation object from list + actor fixed + styles fixed

--- a/pg/workenv.html
+++ b/pg/workenv.html
@@ -126,7 +126,7 @@
                             <h3 class="panel-title">Объекты</h3>
                         </div>-->
                         <div class="panel-body">
-                            <select class="list" size="5" id="relationList" name="listTab2"></select>
+                            <select class="list" size="5" id="relationList" name="listTab2"><option>Object</option></select>
                         </div>
                     </div>
                 </div>
