--- a/pg/workenv.html
+++ b/pg/workenv.html
@@ -88,7 +88,7 @@
                             <h3 class="panel-title">Объекты</h3>
                         </div>-->
                         <div class="panel-body">
-                            <select class="list" size="5" id="List1" name="listTab1" onclick="refreshAttr();"></select>
+                            <select class="list" size="5" id="List1" name="listTab1" onclick="refreshAttr(1);"></select>
                         </div>
                     </div>
                     <div class="selects panel panel-default">
@@ -148,7 +148,7 @@
                             <h3 class="panel-title">Объекты</h3>
                         </div>-->
                         <div class="panel-body">
-                            <select class="list" size="5" id="erObjList" name="listTab3"></select>
+                            <select class="list" size="5" id="erObjList" name="listTab3"  onclick="refreshAttr(3);"></select>
                         </div>
                     </div>
                     <div class="selects panel panel-default">
@@ -156,7 +156,7 @@
                             <h3 class="panel-title">Атрибуты</h3>
                         </div>-->
                         <div class="panel-body">
-                            <select class="list" size="5" id="erAttrList" name="listTab3 "></select>
+                            <select class="list" size="5" id="erAttrList" name="listTab3"></select>
                         </div>
                     </div>
                 </div>
