--- a/pg/projects.html
+++ b/pg/projects.html
@@ -84,7 +84,7 @@
                                     <div class = 'gorizont'>
                                     <input type="button" style = "border-style: none; width: 97%; margin: 0;padding-right: 90%;"
                                            class="btn btn-default buttonTeacher" value="Преподаватель">
-                                     <button id="deleteTeacher" style = 'border: none;' type="button" class="btn btn-default btn-small" onclick="del()">
+                                     <button id="deleteTeacher" style = 'border: none;' type="button" class="btn btn-default btn-small" onclick="return del(this);">
                     <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
                                     </button> 
                                     </div>
