--- a/pg/workenv.html
+++ b/pg/workenv.html
@@ -24,7 +24,8 @@
     <script src="../js/bootstrap.min.js"></script>
     <script src="../js/concept.js" type="text/javascript"></script>
 	<script src="../js/jquery.cookie.js" type="text/javascript"></script>
-
+    <script src="../js/jquery.session.js" type="text/javascript"></script>
+    <script src="../js/session.js" type="text/javascript"></script>
     <script src="../js/controllers/er-controller.js" type="text/javascript"></script>
     <script src="../js/controllers/object-diagram-controller.js "></script>
     <script src="../js/controllers/use-case-controller.js "></script>
