--- a/pg/projects.html
+++ b/pg/projects.html
@@ -39,32 +39,12 @@
                         <div class="panel-heading">
                             <h3 class="panel-title">
                             Проекты:
-<<<<<<< HEAD
-                                <button id="edit" style="margin-left: 64%;"
-                                        type="button" class="btn btn-default btn-small">
-=======
                                 <button id="edit" style="margin-left: 64%;" 
                                         type="button" class="btn btn-default btn-small" onclick="addProject()">
->>>>>>> web
                     <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
                                     </button>
                             </h3>
                         </div>
-<<<<<<< HEAD
-                        <div id = "projectsDiv" style="padding:0;" class="panel-body">
-                            <input type="button" style = "border-style:none; width: 100%; height:20%; margin:0;"
-                                   class="btn btn-default buttonProject" value="MyProject1">
-                </div>
-                <div class="gorizont">
-                <div class="inputs panel panel-default">
-                        <div style="padding:0;" class="panel-body">
-                            <input type="button" class="btn btn-default" value="кококо">
-                            <input type="button"  class="btn btn-default" value="мимими" >
-                            <input type="button"  class="btn btn-default" value="ляляля" >
-                        </div>
-                </div>
-            </div>
-=======
                          <div id = "mainProjectDiv">
                                 <div id = "projectDiv" style="padding:0;" class="panel-body">
                                     <div class = 'gorizont'>
@@ -76,17 +56,15 @@
                                     </div>
                                 </div>
                             </div>       
->>>>>>> web
         </div>
     </div>
    </div>
-
     <div class="rightDiv">
         <div style = "padding: 2%">
-         <div class="panel panel-default full-screen">
+         <div class="panel panel-default">
                     <div class="panel-heading">
                         <h3 class="panel-title">Личная информация:
-                         <button style="margin-left: 79%;" type="button" class="btn btn-default btn-small" onclick="edit()" >
+                         <button id = "editButton" style="margin-left: 79%;" type="button" class="btn btn-default btn-small" onclick="edit()" >
                 <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                                 </button>
                             </h3>
@@ -131,7 +109,7 @@
                 </div>
                     
             <div style = "padding: 2%">
-             <div class="panel panel-default full-screen">
+             <div class="panel panel-default">
                         <div class="panel-heading">
                             <h3 id = 'divdiv' class="panel-title">Преподаватели:
                              <button id="addTeacher" style="margin-left: 83%;" type="button" class="btn btn-default btn-small" onclick="addTeacher()">
