--- a/pg/projects.html
+++ b/pg/projects.html
@@ -12,6 +12,8 @@
     <script src="../js/jquery-2.1.3.min.js" type="text/javascript"></script>
     <script src="../js/angular.min.js" type="text/javascript"></script>
     <script src="../js/app.js" type="text/javascript"></script>
+    <script src="../js/jquery.session.js" type="text/javascript"></script>
+    <script src="../js/session.js" type="text/javascript"></script>
 	 <script src="../js/translit.js" type="text/javascript"></script>
 	<script src="../js/controllers/user-room-controller.js "></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
