--- a/pg/projects.html
+++ b/pg/projects.html
@@ -8,135 +8,134 @@
     <link rel="stylesheet" href="../css/project.css">
     <link rel="stylesheet" href="../css/workenv.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-    <link href="//cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.0/bootstrap3-editable/css/bootstrap-editable.css" rel="stylesheet"/>
+    <link href="//cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.0/bootstrap3-editable/css/bootstrap-editable.css"
+          rel="stylesheet"/>
     <script src="../js/jquery-2.1.3.min.js" type="text/javascript"></script>
     <script src="../js/angular.min.js" type="text/javascript"></script>
     <script src="../js/app.js" type="text/javascript"></script>
     <script src="../js/jquery.session.js" type="text/javascript"></script>
     <script src="../js/session.js" type="text/javascript"></script>
-	 <script src="../js/translit.js" type="text/javascript"></script>
-	<script src="../js/controllers/user-room-controller.js "></script>
+    <script src="../js/translit.js" type="text/javascript"></script>
+    <script src="../js/controllers/user-room-controller.js "></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <script src="../js/projects.js" type="text/javascript"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.0/bootstrap3-editable/js/bootstrap-editable.min.js"></script>
-	<script src="../js/jquery.cookie.js" type="text/javascript"></script>
+    <script src="../js/jquery.cookie.js" type="text/javascript"></script>
 </head>
-<body ng-app="cache">
-  <!-- Header -->
-    <div class="headerDiv">
-         <div class="icondiv">
-            <div id="icon"  onclick="location.href='projects.html'"></div>
-            <div class="userTextDiv" id="userName">
-                <h3 id="userNameText" onclick="location.href='projects.html'">Селех Максим Михайлович</h3>
-            </div>
-        </div>
-          <button id="logOut" class="logoutButton" onclick="location.href='registration.html'">
-            <font class="sender">Выйти</font>
-          </button>
-    </div>
-    <div class="maindiv">
-        <div class="leftDivBut">
-            <div style="padding:6%;">
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            <h3 class="panel-title">
-                            Проекты:
-                                <button id="edit" style="margin-left: 64%;" 
-                                        type="button" class="btn btn-default btn-small" onclick="addProject()">
-                    <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-                                    </button>
-                            </h3>
-                        </div>
-                         <div id = "mainProjectDiv">
-                                <div id = "projectDiv" style="padding:0;" class="panel-body">
-                                    <div class = 'gorizont'>
-                                    <input type="button" style = "border-style: none;width: 90%; margin: 0;padding-right: 80%;"
-                                           class="btn btn-default buttonTeacher" value="MyProject">
-                                     <button id="deleteTeacher" style = 'border: none;' type="button" class="btn btn-default btn-small" onclick="delProject();">
-                    <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-                                    </button> 
-                                    </div>
-                                </div>
-                            </div>       
+<body ng-app="cache"  ng-init="getCompanies()">
+<!-- Header -->
+<div class="headerDiv">
+    <div class="icondiv">
+        <div id="icon" onclick="location.href='projects.html'"></div>
+        <div class="userTextDiv" id="userName">
+            <h3 id="userNameText" onclick="location.href='projects.html'">Селех Максим Михайлович</h3>
         </div>
     </div>
-   </div>
-    <div class="rightDiv">
-        <div style = "padding: 2%">
-         <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <h3 class="panel-title">Личная информация:
-                         <button id = "editButton" style="margin-left: 79%;" type="button" class="btn btn-default btn-small" onclick="edit()" >
-                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-                                </button>
-                            </h3>
-                        </div>
-                        <div class = 'gorizont'>
-                            <div style = "border: none;width: 30%;" class="panel panel-body panel-default">
-                                <h4 >
-                                    Логин: 
-                                </h4>
-                            </div>
-                            <div id = "group" style = "border: none;padding-right: 70%;" class="choice panel panel-body panel-default">
-                                <h4 id = "email">
-                                   selech@mail.com
-                                </h4>
-                            </div>
-                        </div> 
-                        <div class = 'gorizont'>
-                            <div style = "border: none;width: 30%;" class="panel panel-body panel-default">
-                                <h4 >
-                                    Должность: 
-                                </h4>
-                            </div>
-                            <div id = "job" style = "border: none;padding-right: 70%;" class="choice panel panel-body panel-default">
-                                <h4 id = "jobTitle">
-                                   Студент
-                                </h4>
-                            </div>
-                        </div>  
-                        <div class = 'gorizont'>
-                            <div style = "border: none;width: 30%;" class="panel panel-body panel-default">
-                                <h4 >
-                                   Место работы:
-                                </h4>
-                            </div>
-                            <div id = "work" style = "border: none;padding-right: 70%;" class="choice panel panel-body panel-default">
-                                <h4 id = "workPlace">
-                                   ХНУРЭ
-                                </h4>
-                            </div>
-                        </div>  
-                    </div>
+    <button id="logOut" class="logoutButton" onclick="location.href='registration.html'">
+        <font class="sender">Выйти</font>
+    </button>
+</div>
+<div class="maindiv">
+    <div class="leftDivBut">
+        <div style="padding:6%;">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h3 class="panel-title">
+                        Проекты:
+                        <button id="edit" style="margin-left: 64%;"
+                                type="button" class="btn btn-default btn-small" onclick="addProject()">
+                            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                        </button>
+                    </h3>
                 </div>
-                    
-            <div style = "padding: 2%">
-             <div class="panel panel-default">
-                        <div class="panel-heading">
-                            <h3 id = 'divdiv' class="panel-title">Преподаватели:
-                             <button id="addTeacher" style="margin-left: 83%;" type="button" class="btn btn-default btn-small" onclick="addTeacher()">
-                    <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-                                    </button>
-                            </h3>
-                        </div>
-                            <div id = "mainTeacherDiv">
-                                <div id = "teacherDiv" style="padding:0;" class="panel-body">
-                                    <div class = 'gorizont'>
-                                    <input type="button" style = "border-style: none; width: 97%; margin: 0;padding-right: 90%;"
-                                           class="btn btn-default buttonTeacher" value="Преподаватель">
-                                     <button id="deleteTeacher" style = 'border: none;' type="button" class="btn btn-default btn-small" onclick="delTeacher();">
-                    <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-                                    </button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                <div id="mainProjectDiv" ng-controller="projectController" ng-model="currentUser">
 
                 </div>
-        
+            </div>
         </div>
-    <div class="footerDiv">
     </div>
+    <div class="rightDiv">
+        <div style="padding: 2%">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h3 class="panel-title">Личная информация:
+                        <button id="editButton" style="margin-left: 79%;" type="button"
+                                class="btn btn-default btn-small" onclick="edit()">
+                            <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                        </button>
+                    </h3>
+                </div>
+                <div class='gorizont'>
+                    <div style="border: none;width: 30%;" class="panel panel-body panel-default">
+                        <h4>
+                            Логин:
+                        </h4>
+                    </div>
+                    <div id="group" style="border: none;padding-right: 70%;"
+                         class="choice panel panel-body panel-default">
+                        <h4 id="email">
+                            selech@mail.com
+                        </h4>
+                    </div>
+                </div>
+                <div class='gorizont'>
+                    <div style="border: none;width: 30%;" class="panel panel-body panel-default">
+                        <h4>
+                            Должность:
+                        </h4>
+                    </div>
+                    <div id="job" style="border: none;padding-right: 70%;"
+                         class="choice panel panel-body panel-default">
+                        <h4 id="jobTitle">
+                            Студент
+                        </h4>
+                    </div>
+                </div>
+                <div class='gorizont'>
+                    <div style="border: none;width: 30%;" class="panel panel-body panel-default">
+                        <h4>
+                            Место работы:
+                        </h4>
+                    </div>
+                    <div id="work" style="border: none;padding-right: 70%;"
+                         class="choice panel panel-body panel-default">
+                        <h4 id="workPlace">
+                            ХНУРЭ
+                        </h4>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div style="padding: 2%">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h3 id='divdiv' class="panel-title">Преподаватели:
+                        <button id="addTeacher" style="margin-left: 83%;" type="button"
+                                class="btn btn-default btn-small" onclick="addTeacher()">
+                            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                        </button>
+                    </h3>
+                </div>
+                <div id="mainTeacherDiv">
+                    <div id="teacherDiv" style="padding:0;" class="panel-body">
+                        <div class='gorizont'>
+                            <input type="button" style="border-style: none; width: 97%; margin: 0;padding-right: 90%;"
+                                   class="btn btn-default buttonTeacher" value="Преподаватель">
+                            <button id="deleteTeacher" style='border: none;' type="button"
+                                    class="btn btn-default btn-small" onclick="delTeacher();">
+                                <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+</div>
+<div class="footerDiv">
+</div>
 </body>
 </html>
