--- a/pg/projects.html
+++ b/pg/projects.html
@@ -62,7 +62,7 @@
 
     <div class="rightDiv">
         <div style = "padding: 2%">
-         <div class="panel panel-default full-screen">
+         <div id = 'cabinet' class="panel panel-default full-screen">
                     <div class="panel-heading">
                         <h3 class="panel-title">Личная информация:
                          <button style="margin-left: 79%;" type="button" class="btn btn-default btn-small" onclick="edit()" >
@@ -102,7 +102,7 @@
                             </div>
                             <div id = "work" style = "border: none;padding-right: 70%;" class="choice panel panel-body panel-default">
                                 <h4 id = "workPlace">
-                                   ХНУРЭ
+                                    ХНУРЭ
                                 </h4>
                             </div>
                         </div>  
