диаграммы работают. надо пофиксить отображение

--- a/pg/workenv.html
+++ b/pg/workenv.html
@@ -59,7 +59,7 @@
                 <div name="tab" class="tab">
                     <h5 class="tabName">Relation</h5>
                 </div>
-                <div name="tab" class="tab">
+                <div name="tab" class="tab" ng-controller="ERController" ng-click="updateER();">
                     <h5 class="tabName">ER</h5>
                 </div>
                 <div name="tab" class="tab">
