--- a/pg/workenv.html
+++ b/pg/workenv.html
@@ -24,6 +24,7 @@
     <script src="../js/bootstrap.min.js"></script>
     <script src="../js/concept.js" type="text/javascript"></script>
 	<script src="../js/jquery.cookie.js" type="text/javascript"></script>
+    <script src="../js/constraint.js" type="text/javascript"></script>
 
     <script src="../js/controllers/er-controller.js" type="text/javascript"></script>
     <script src="../js/controllers/object-diagram-controller.js "></script>
@@ -609,15 +610,15 @@
                     </div>
                 </div>
             </div>
-            <div id="div8" name="contentDiv">
+            <div id="div8" name="contentDiv" style="overflow-y: scroll!important;">
             <!--Ограничения целостности-->
             <div width="5%">
-            <button   style = "margin-left: 2%;  margin-top:2%;" type="button" class="btn btn-default ">
+            <button   style = "margin-left: 2%;  margin-top:2%;" type="button" class="btn btn-default " onclick="addConstr();">
                                     <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
                                 </button>
             </div>
-            <div id = "constraintList">
-            <div class="panel panel-default constraintPanel " width="80%">
+            <div id = "constraintList" >
+            <div class="panel panel-default constraintPanel " width="80%" id = "constraint_1_element">
                <div class="gorizont">
                 <div  class="btn-group"  style="margin-top:2%;">
                       <button style = "margin-left: 200%" type="button" data-toggle="dropdown" class="btn btn-default dropdown-toggle">
@@ -658,8 +659,6 @@
             </div>
 
              </div>
-
-
 
             </div>
         </div>
